improve grid readability

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -15,7 +15,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4b1ec69f-6878-4f1a-93c1-e204680fb115",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Data for plotting\n",
@@ -27,8 +29,16 @@
     "\n",
     "ax.set(xlabel='time (s)', ylabel='voltage (mV)',\n",
     "       title='The simplest plot in the world')\n",
-    "ax.grid()"
+    "ax.grid('on')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b988316-6b4e-4154-ac3e-9affa5335705",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
